--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dev": "node --env-file=.env --watch-path=./src ./src/app.js",
     "start": "node --env-file=.env ./src/app.js",
+    "setup": "node --env-file=.env ./src/setup.js",
     "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' NODE_NO_WARNINGS=1 jest ./*.test.js",
     "test:coverage": "cross-env NODE_OPTIONS='--experimental-vm-modules' NODE_NO_WARNINGS=1 jest ./*.test.js --coverage",
     "lint": "run-p lint:*",
