--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "node --env-file=.env --watch-path=./src ./src/app.js",
-    "start": "node --env-file=.env ./src/app.js",
+    "start": "dotenv -e .env node ./src/app.js",
     "setup": "node --env-file=.env ./src/setup.js",
     "test": "cross-env NODE_OPTIONS='--experimental-vm-modules' NODE_NO_WARNINGS=1 jest ./*.test.js",
     "test:coverage": "cross-env NODE_OPTIONS='--experimental-vm-modules' NODE_NO_WARNINGS=1 jest ./*.test.js --coverage",
@@ -23,6 +23,8 @@
     "@jest/globals": "^29.7.0",
     "browser-sync": "^3.0.2",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.0.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
